# rainfall

./: 01 - Scrape Archive Data.ipynb  02 - Rainfall Data Analysis.ipynb  README.md  pyproject.toml
data/: Wanstead Rainfall 2021.csv  Wanstead Rainfall 2022-23.csv  Wansted 15min Rainfall Data 2021.xlsx
data/merged/: Wanstead Daily Rainfall Merged.csv
